# MIDIJuggler

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: example.toml  rotary_display.toml
docs/: bandhelper.md  dietpi_setup.md  gamepi-deploy.md  gamepi13.md  gpio_optocoupler_footswitch.md  hid_input.md  master_clock.md  midi_mapping_libraries.md  osc_mapping_libraries.md  rotary_display.md  web_configuration.md
scripts/: deploy-gamepi.sh  gamepi-apply-gamma.sh  gamepi-blanking-watch.sh  gamepi-boot-splash.sh  gamepi-brightness-adjust.py  gamepi-brightness-keys.py  gamepi-brightness-probe.py  gamepi-brightness-run.sh  gamepi-clear-chromium-cache.sh  gamepi-disable-blanking.sh  gamepi-display-health.sh  gamepi-fb-handoff.sh  gamepi-fbcon.sh  gamepi-is-start-pressed.py  gamepi-is-start-pressed.sh  gamepi-kiosk-diagnostics.sh  gamepi-launch-kiosk.sh  gamepi-paths.sh  gamepi-reboot.sh  gamepi-recover-display.sh  gamepi-reload-after-pull.sh  gamepi-splash-stop.sh  gamepi-start-held.py  gamepi-start-kiosk.sh  gamepi-verify-keys.sh  gamepi-x1207-pld.py  gamepi_backlight_pwm.py  gamepi_brightness_lib.py  gamepi_gpio_keys.py  gamepi_lgpio_env.py  install-gamepi13-brightness.sh  install-gamepi13-consoleblank.sh  install-gamepi13-keys.sh  install-gamepi13-services.sh  install-gamepi13-xorg.sh  pull-midijuggler-app.sh  restart-midijuggler.sh  set-hostname.sh  wait-for-boot-settled.sh  wait-for-fb0.sh  (+4 more)
systemd/: gamepi-blanking-watch.service  gamepi-brightness-keys.service  gamepi-kiosk-ready.service  gamepi-kiosk.service  gamepi-splash.service  gamepi-tmpfiles.conf  (+4 more)
(+230 files in other folders)
