[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "midijuggler"
version = "0.1.0"
description = "Async MIDI/OSC/GPIO routing and mapping service for Raspberry Pi."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Andreas Hahn" }]
dependencies = [
  "aiohttp>=3.9",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
]

[project.scripts]
midijuggler = "midijuggler.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"midijuggler.web" = ["static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
